Game board interfaces and models

--- a/src/Antyrama.ScoreBoard/Antyrama.ScoreBoard.csproj
+++ b/src/Antyrama.ScoreBoard/Antyrama.ScoreBoard.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFrameworks>net6.0;net7.0;net8.0</TargetFrameworks>
         <IsPackable>true</IsPackable>
         <PackageId>Antyrama.ScoreBoard</PackageId>
         <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
@@ -12,6 +12,9 @@
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <PackageTags>scoreBoard</PackageTags>
         <Nullable>enable</Nullable>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+        <LangVersion>latest</LangVersion>
     </PropertyGroup>
 
 </Project>
